--- a/Vistas/winAcercaDe.xaml
+++ b/Vistas/winAcercaDe.xaml
@@ -2,11 +2,17 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="winAcercaDe" WindowStyle="None" AllowsTransparency="True" ResizeMode="CanResizeWithGrip" Background="Transparent" Height="582" Width="500" WindowStartupLocation="CenterScreen" MinWidth="400" MinHeight="582" MouseLeftButtonDown="moveWindow" AllowDrop="True" Drop="Window_Drop" Loaded="Window_Loaded">
+    <Window.Resources>
+        <Style TargetType="ToolTip">
+            <Setter Property="Background" Value="Black"></Setter>
+            <Setter Property="Foreground" Value="White"></Setter>
+        </Style>
+    </Window.Resources>
     <Grid>
         <Border BorderBrush="Black" BorderThickness="1" CornerRadius="10">
             <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
-                <Ellipse Height="15" HorizontalAlignment="Right" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
-                <Ellipse Height="15" HorizontalAlignment="Left" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
+                <Ellipse Height="15" HorizontalAlignment="Right" ToolTip="Cerrar ventana" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
+                <Ellipse Height="15" HorizontalAlignment="Left" ToolTip="Maximizar ventana" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
                 <Label Name="lblWinTitle" Content="Acerca De" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
             </DockPanel>
             <Border.Background>
@@ -24,11 +30,11 @@
                 <RowDefinition Height="20*"/>
             </Grid.RowDefinitions>
             <MediaElement Height="auto" HorizontalAlignment="center" Name="mediaElement1" VerticalAlignment="Top" Width="auto" MediaOpened="mediaElement1_MediaOpened"/>
-            <Button Content="Play" Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="39,22,0,0" Name="button1" VerticalAlignment="Top" Width="75" Click="button1_Click" />
-            <Button Content="Pausar" Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="158,19,0,0" Name="button2" VerticalAlignment="Top" Width="75" Click="button2_Click" />
-            <Button Content="Reiniciar" Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="251,19,0,0" Name="button3" VerticalAlignment="Top" Width="75" Click="button3_Click" />
-            <Slider Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="6,71,0,0" Name="slider1" VerticalAlignment="Top" Width="100" ValueChanged="slider1_ValueChanged" />
-            <Slider Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="367,18,0,0" Name="slider2" VerticalAlignment="Top" Width="100" LargeChange="0.1" Maximum="1" SmallChange="0.01" Value="1" ValueChanged="slider2_ValueChanged" />
+            <Button ToolTip="Reproducir el contenido" Content="Reproducir" Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="39,22,0,0" Name="button1" VerticalAlignment="Top" Width="75" Click="button1_Click" />
+            <Button ToolTip="Pausar el contenido" Content="Pausar" Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="158,19,0,0" Name="button2" VerticalAlignment="Top" Width="75" Click="button2_Click" />
+            <Button ToolTip="Reiniciar el contenido" Content="Reiniciar" Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="251,19,0,0" Name="button3" VerticalAlignment="Top" Width="75" Click="button3_Click" />
+            <Slider Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="6,71,0,0" ToolTip="Avanzar o retroceder el video" Name="slider1" VerticalAlignment="Top" Width="100" ValueChanged="slider1_ValueChanged" />
+            <Slider Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="367,18,0,0" ToolTip="Control de volumen" Name="slider2" VerticalAlignment="Top" Width="100" LargeChange="0.1" Maximum="1" SmallChange="0.01" Value="1" ValueChanged="slider2_ValueChanged" />
         </Grid>
     </Grid>
 </Window>
