--- a/Vistas/winConsultaMesas.xaml
+++ b/Vistas/winConsultaMesas.xaml
@@ -2,11 +2,17 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="winConsultaMesas" Height="300" Width="300" Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow" MinHeight="300" MinWidth="300">
+    <Window.Resources>
+        <Style TargetType="ToolTip">
+            <Setter Property="Background" Value="Black"></Setter>
+            <Setter Property="Foreground" Value="White"></Setter>
+        </Style>
+    </Window.Resources>
     <Grid>
         <Border Style="{StaticResource MainGridStyle}">
             <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
-                <Ellipse Height="15" HorizontalAlignment="Right" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
-                <Ellipse Height="15" HorizontalAlignment="Left" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
+                <Ellipse Height="15" HorizontalAlignment="Right" ToolTip="Cerrar ventana" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
+                <Ellipse Height="15" HorizontalAlignment="Left" ToolTip="Maximizar ventana" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
                 <Label Name="lblConsultaTitle" Content="Distribución de mesas" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
             </DockPanel>
         </Border>
@@ -18,7 +24,7 @@
             </Grid.RowDefinitions>
             <Label Grid.Row="0" Content="Ingrese el número de mesas:" Height="28" VerticalAlignment="Bottom" HorizontalAlignment="Center" Name="lblNroMesas" Style="{StaticResource StyleLabelForm}"/>
             <TextBox Grid.Row="1" Height="30" HorizontalAlignment="Center" Name="txtNroMesas" Width="120" Style="{StaticResource StyleTextBoxForm}"/>
-            <Button Grid.Row="2" Content="Aceptar" Width="90" Height="40" HorizontalAlignment="Center" Click="btnAceptar_Click" Style="{StaticResource ButtonFormBlack}"/>
+            <Button Grid.Row="2" ToolTip="Generar la vista de mesas con el nro. ingresado" Content="Aceptar" Width="90" Height="40" HorizontalAlignment="Center" Click="btnAceptar_Click" Style="{StaticResource ButtonFormBlack}"/>
         </Grid>
         
     </Grid>
