--- a/Vistas/winHistorialLogin.xaml
+++ b/Vistas/winHistorialLogin.xaml
@@ -20,14 +20,17 @@
                 <componentModel:SortDescription PropertyName="Log_Id" Direction="Ascending"/>
             </CollectionViewSource.SortDescriptions>
         </CollectionViewSource>
-
+        <Style TargetType="ToolTip">
+            <Setter Property="Background" Value="Black"></Setter>
+            <Setter Property="Foreground" Value="White"></Setter>
+        </Style>
     </Window.Resources>
 
     <Grid>
         <Border BorderBrush="Black" BorderThickness="1" CornerRadius="10">
             <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
-                <Ellipse Height="15" HorizontalAlignment="Right" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
-                <Ellipse Height="15" HorizontalAlignment="Left" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
+                <Ellipse Height="15" ToolTip="Cerrar ventana" HorizontalAlignment="Right" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
+                <Ellipse Height="15" ToolTip="Maximizar ventana" HorizontalAlignment="Left" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
                 <Label Name="lblWinTitle" Content="Historial de Login" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
             </DockPanel>
             <Border.Background>
@@ -66,7 +69,7 @@
                 </ListView.View>
             </ListView>
 
-            <Button Grid.Row="2" Content="Actualizar descripción" Style="{StaticResource ButtonFormBlack}" Grid.Column="1" Height="30" HorizontalAlignment="Center" Name="btnActualizar" VerticalAlignment="Bottom" Width="185" Click="btnActualizar_Click" />
+            <Button Grid.Row="2" ToolTip="Actualizar la descripción del log seleccionado" Content="Actualizar descripción" Style="{StaticResource ButtonFormBlack}" Grid.Column="1" Height="30" HorizontalAlignment="Center" Name="btnActualizar" VerticalAlignment="Bottom" Width="185" Click="btnActualizar_Click" />
             
         </Grid>
     </Grid>
