--- a/Vistas/winModificacionHistorialLogin.xaml
+++ b/Vistas/winModificacionHistorialLogin.xaml
@@ -2,11 +2,17 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="winModificacionHistorialLogin" MinHeight="500" MinWidth="400" Height="500" Width="400" Style="{StaticResource MainWindowStyle}"  WindowStartupLocation="CenterScreen" MouseLeftButtonDown="moveWindow" Loaded="Window_Loaded">
+    <Window.Resources>
+        <Style TargetType="ToolTip">
+            <Setter Property="Background" Value="Black"></Setter>
+            <Setter Property="Foreground" Value="White"></Setter>
+        </Style>
+    </Window.Resources>
     <Grid>
         <Border BorderBrush="Black" BorderThickness="1" CornerRadius="10">
             <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
-                <Ellipse Height="15" HorizontalAlignment="Right" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
-                <Ellipse Height="15" HorizontalAlignment="Left" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
+                <Ellipse Height="15" ToolTip="Cerrar ventana" HorizontalAlignment="Right" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
+                <Ellipse Height="15" ToolTip="Maximizar ventana" HorizontalAlignment="Left" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0" MouseLeftButtonDown="minimizeWindow"/>
                 <Label Name="lblWinTitle" Content="Actualizar log" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
             </DockPanel>
             <Border.Background>
@@ -34,7 +40,7 @@
                
             </TextBox>
 
-            <Button Grid.Row="2" Content="Actualizar" Style="{StaticResource ButtonFormBlack}" Grid.Column="1" Height="30" HorizontalAlignment="Center" Name="btnActualizar" VerticalAlignment="Bottom" Width="100" Click="btnActualizar_Click" />
+            <Button Grid.Row="2" ToolTip="Actualizar descripción del log" Content="Actualizar" Style="{StaticResource ButtonFormBlack}" Grid.Column="1" Height="30" HorizontalAlignment="Center" Name="btnActualizar" VerticalAlignment="Bottom" Width="100" Click="btnActualizar_Click" />
 
         </Grid>
         </Grid>
