--- a/Vistas/winWaiterMenu.xaml
+++ b/Vistas/winWaiterMenu.xaml
@@ -2,11 +2,16 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Menú de Administrador - NOMBRE DE LA EMPRESA" WindowStyle="None" Height="464" Width="833" Background="#FF313131" AllowsTransparency="True" MinWidth="833" MouseLeftButtonDown="moveWindow" MinHeight="464" WindowState="Normal"  Topmost="False" WindowStartupLocation="CenterScreen">
-     
+    <Window.Resources>
+        <Style TargetType="ToolTip">
+            <Setter Property="Background" Value="Black"></Setter>
+            <Setter Property="Foreground" Value="White"></Setter>
+        </Style>
+    </Window.Resources> 
     <Grid>
         <DockPanel Height="40" Name="dockPanel1" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" FlowDirection="RightToLeft">
-            <Ellipse Height="15" HorizontalAlignment="Right" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
-            <Ellipse Height="15" HorizontalAlignment="Left" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0"  MouseLeftButtonDown="minimizeWindow"/>
+            <Ellipse Height="15" ToolTip="Cerrar ventana" HorizontalAlignment="Right" Name="btnClose" Fill="#FFFF4B6A" Width="15" Margin="10,0,5,0" MouseLeftButtonDown="closeWindow"/>
+            <Ellipse Height="15" ToolTip="Maximizar ventana" HorizontalAlignment="Left" Name="btnMaximize" Fill="#EEEEEE" Width="15" Margin="5,0,5,0"  MouseLeftButtonDown="minimizeWindow"/>
             <Label Name="lblWinTitle" Content="HOLDEM - Sistema de Administración" Padding="20,0" HorizontalAlignment="Right" FontFamily="FreeSans" FontSize="12" VerticalContentAlignment="Center" Foreground="#EEEEEE"/>
         </DockPanel>
         <!--menú superior-->
@@ -25,13 +30,13 @@
                     <RowDefinition Height="100*" />
                 </Grid.RowDefinitions>
                 <StackPanel Orientation="Vertical" VerticalAlignment="Top" MinWidth="0" Height="325">
-                    <RadioButton Content="Inicio" FontSize="20" Height="50" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick" Name="rb1" MouseEnter="rb1_MouseEnter"></RadioButton>
-                    <RadioButton Content="Gestion de Pedidos" FontSize="12" Height="50" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick" Name="rb2" MouseEnter="rb2_MouseEnter" Click="rb2_Click"></RadioButton>
-                    <RadioButton Content="Gestion de Mesas" FontSize="12" Height="50" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick" Name="rb3" MouseEnter="rb3_MouseEnter" Click="rb3_Click"></RadioButton>
-                    <RadioButton Content="Gestion de Clientes" FontSize="12" Height="50" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick"  HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Name="rb4" MouseEnter="rb4_MouseEnter" Click="rb4_Click"></RadioButton>
+                    <RadioButton ToolTip="Volver al inicio" Content="Inicio" FontSize="20" Height="50" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick" Name="rb1" MouseEnter="rb1_MouseEnter"></RadioButton>
+                    <RadioButton ToolTip="Acceder al módulo de gestión de pedidos" Content="Gestion de Pedidos" FontSize="12" Height="50" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick" Name="rb2" MouseEnter="rb2_MouseEnter" Click="rb2_Click"></RadioButton>
+                    <RadioButton ToolTip="Acceder al módulo de gestión de mesas" Content="Gestion de Mesas" FontSize="12" Height="50" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick" Name="rb3" MouseEnter="rb3_MouseEnter" Click="rb3_Click"></RadioButton>
+                    <RadioButton ToolTip="Acceder al módulo de gestión de clientes" Content="Gestion de Clientes" FontSize="12" Height="50" Foreground="White" Style="{StaticResource BotondeMenu}" Checked="informacionClick"  HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Name="rb4" MouseEnter="rb4_MouseEnter" Click="rb4_Click"></RadioButton>
                 </StackPanel>
                 <TextBlock Foreground="White" Grid.Row="1" Height="24" HorizontalAlignment="Center" Margin="0,0,0,24" Name="txbUsuario" VerticalAlignment="Bottom" />
-                <Button Name="btnLogout" Content="Cerrar Sesión" Height="22" FontFamily="FreeSans" FontSize="13" Width="88" Background="#E1EF5050" BorderBrush="#001D0000" Foreground="White" ClipToBounds="True" Margin="7" Grid.Row="1" VerticalAlignment="Bottom" Click="btnLogout_Click_1" />
+                <Button Name="btnLogout" ToolTip="Cerrar la actual sesión" Content="Cerrar Sesión" Height="22" FontFamily="FreeSans" FontSize="13" Width="88" Background="#E1EF5050" BorderBrush="#001D0000" Foreground="White" ClipToBounds="True" Margin="7" Grid.Row="1" VerticalAlignment="Bottom" Click="btnLogout_Click_1" />
                 <Image Name="image1" Stretch="Fill" Source="/Vistas;component/Images/icono-usuario.png" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,54" Height="46" Width="50" />
             </Grid>
             <Image Name="logoholdem" Source="/Vistas;component/Images/holdemlogo.png" Stretch="Uniform" Width="Auto" HorizontalAlignment="Center" Height="Auto" VerticalAlignment="Center" Grid.Column="1" Margin="90,0" Opacity="1" />
