--- a/Vistas/Styles/StylesWindow.xaml
+++ b/Vistas/Styles/StylesWindow.xaml
@@ -6,5 +6,12 @@
             <Setter Property="Control.FontFamily" Value="/Fonts/#FreeSans"></Setter>
         </Style.Setters>        
     </Style>
-    
+
+
+    <Style x:Key="MediaPlayerFont">
+        <Style.Setters>
+            <Setter Property="Control.FontFamily" Value="/Fonts/#font bottons music"></Setter>
+        </Style.Setters>
+    </Style>
+
 </ResourceDictionary>
